--- a/app/src/main/res/drawable/ic_eye_selector.xml
+++ b/app/src/main/res/drawable/ic_eye_selector.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_checked="true"
-        android:drawable="@drawable/ic_visibility_off"/>
+        android:drawable="@drawable/ic_eye_off"/>
     <item
-        android:drawable="@drawable/ic_visibility_on"/>
+        android:drawable="@drawable/ic_eye_on"/>
 
 </selector>
