--- a/app/src/main/res/drawable/bg_textfield_default.xml
+++ b/app/src/main/res/drawable/bg_textfield_default.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    android:padding="10dp" >
-    <solid
-        android:color="@color/neutral_300" />
-    <corners
-        android:radius="@dimen/corner_radius" />
+    android:padding="10dp"
+    android:shape="rectangle">
+    <solid android:color="@color/white" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/neutral_400" />
+    <corners android:radius="@dimen/corner_radius" />
 </shape>
