--- a/app/src/main/res/drawable/bg_textfield_error.xml
+++ b/app/src/main/res/drawable/bg_textfield_error.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle"
     android:padding="10dp" >
     <solid
-        android:color="@color/danger_50" />
+        android:color="@color/white" />
     <stroke
         android:color="@color/danger_500"
-        android:width="2dp"/>
+        android:width="1dp"/>
     <corners
         android:radius="@dimen/corner_radius" />
 </shape>
