--- a/app/src/main/res/drawable/bg_textfield_selector.xml
+++ b/app/src/main/res/drawable/bg_textfield_selector.xml
@@ -2,7 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_focused="true"
+        android:state_selected="false"
         android:drawable="@drawable/bg_textfield_focused"/>
+    <item
+        android:state_selected="true"
+        android:drawable="@drawable/bg_textfield_error" />
     <item
         android:drawable="@drawable/bg_textfield_default"/>
 </selector>
