--- a/app/src/main/res/layout/act_request_money.xml
+++ b/app/src/main/res/layout/act_request_money.xml
@@ -25,7 +25,7 @@
 
     <TextView
         android:id="@+id/lblTitlePhoneNumber"
-        style="@style/TextBody"
+        style="@style/Text_Regular"
         android:layout_marginTop="@dimen/heading_margin_top"
         android:text="@string/title_enter_required"
         app:layout_constraintEnd_toEndOf="parent"
