--- a/app/src/main/res/layout/act_send_money.xml
+++ b/app/src/main/res/layout/act_send_money.xml
@@ -52,7 +52,7 @@
 
     <TextView
         android:id="@+id/lblEnterDetails"
-        style="@style/TextBody"
+        style="@style/Text_Regular"
         android:layout_marginTop="16dp"
         android:text="@string/title_enter_required"
         app:layout_constraintEnd_toEndOf="@+id/balanceLayout"
