--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF121212</color>
     <color name="white">#FFFFFFFF</color>
     <color name="neutral_300">#FFEFEFF2</color>
-    <color name="neutral_400">#BBBBBE</color>
+    <color name="neutral_400">#60000000</color>
     <color name="neutral_500">#FF757575</color>
     <color name="neutral_700">#FF575757</color>
     <color name="neutral_900">#FF323232</color>
@@ -17,8 +17,9 @@
     <color name="ripple_primary">#FF00796B</color>
     <color name="ripple_secondary">#FFCACACA</color>
 
-    <color name="danger_50">#FFFFF6F5</color>
+    <color name="danger_50">#FCEBE9</color>
     <color name="danger_200">#E77366</color>
     <color name="danger_500">#FFDD2C00</color>
-    <color name="warning">#FFF9C610</color>
+    <color name="warning_50">#FFF8DE</color>
+    <color name="warning_500">#FFC400</color>
 </resources>
