--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.Hygeia" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
@@ -18,16 +18,14 @@
     </style>
 
     <!--BUTTONS STYLE-->
-
     <style name="Btn_Primary" parent="Widget.MaterialComponents.Button">
         <item name="cornerRadius">@dimen/corner_radius</item>
-        <item name="android:backgroundTint">@color/bg_primary_btn_selector</item>
         <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:letterSpacing">0.06</item>
         <item name="android:stateListAnimator">@null</item>
-        <item name="android:insetTop">@dimen/btn_inset_x</item>
-        <item name="android:insetBottom">@dimen/btn_inset_x</item>
+        <item name="android:insetTop">@dimen/btn_inset_y</item>
+        <item name="android:insetBottom">@dimen/btn_inset_y</item>
         <item name="android:layout_height">@dimen/elmnt_y</item>
         <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
@@ -35,29 +33,39 @@
         <item name="rippleColor">@color/ripple_primary</item>
     </style>
 
-    <style name="Btn_Secondary" parent="Widget.MaterialComponents.Button">
+<!--    <style name="Btn_Secondary" parent="Widget.MaterialComponents.Button.OutlinedButton">-->
+<!--        <item name="cornerRadius">@dimen/corner_radius</item>-->
+<!--        <item name="android:fontFamily">@font/roboto_bold</item>-->
+<!--        <item name="android:textColor">@color/neutral_900</item>-->
+<!--        <item name="android:textAllCaps">false</item>-->
+<!--        <item name="android:letterSpacing">0.06</item>-->
+<!--        <item name="android:stateListAnimator">@null</item>-->
+<!--        <item name="android:insetTop">@dimen/btn_inset_y</item>-->
+<!--        <item name="android:insetBottom">@dimen/btn_inset_y</item>-->
+<!--        <item name="android:layout_height">@dimen/elmnt_y</item>-->
+<!--        <item name="android:layout_marginStart">@dimen/mx</item>-->
+<!--        <item name="android:layout_marginEnd">@dimen/mx</item>-->
+<!--        <item name="rippleColor">@color/ripple_secondary</item>-->
+<!--    </style>-->
+
+    <style name="Btn_Secondary" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="cornerRadius">@dimen/corner_radius</item>
         <item name="android:fontFamily">@font/roboto_bold</item>
-        <item name="android:textColor">@color/neutral_700</item>
+        <item name="android:textColor">@color/neutral_900</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:letterSpacing">0.06</item>
-        <item name="android:backgroundTint">@color/neutral_300</item>
         <item name="android:stateListAnimator">@null</item>
-        <item name="android:insetTop">@dimen/btn_inset_x</item>
-        <item name="android:insetBottom">@dimen/btn_inset_x</item>
+        <item name="android:insetTop">@dimen/btn_inset_y</item>
+        <item name="android:insetBottom">@dimen/btn_inset_y</item>
         <item name="android:layout_height">@dimen/elmnt_y</item>
         <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
-        <item name="rippleColor">@color/ripple_secondary</item>
     </style>
 
-    <style name="Btn_Label" parent="Widget.MaterialComponents.Button">
-        <item name="android:fontFamily">@font/roboto_bold</item>
-        <item name="android:textColor">@drawable/cstm_color_btn_label</item>
+    <style name="Btn_Text" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textAllCaps">false</item>
-        <item name="android:letterSpacing">0.04</item>
-        <item name="android:backgroundTint">@color/white</item>
-        <item name="android:stateListAnimator">@null</item>
-        <item name="android:textSize">@dimen/text_md</item>
+        <item name="cornerRadius">@dimen/corner_radius</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="Btn_Back" parent="Widget.AppCompat.ImageButton">
@@ -69,7 +77,7 @@
         <item name="android:src">@drawable/ic_back</item>
     </style>
 
-    <style name="Btn_Md_0" parent="Widget.AppCompat.ImageButton">
+    <style name="Btn_Md_Clear" parent="Widget.AppCompat.ImageButton">
         <item name="android:layout_width">@dimen/circle_lg</item>
         <item name="android:layout_height">@dimen/circle_lg</item>
         <item name="android:layout_alignParentEnd">true</item>
@@ -78,7 +86,7 @@
         <item name="android:background">@drawable/bg_circle_clear</item>
     </style>
 
-    <style name="Tgl_Md_0">
+    <style name="Tgl_Md_Clear">
         <item name="android:layout_width">@dimen/circle_lg</item>
         <item name="android:layout_height">@dimen/circle_lg</item>
         <item name="android:layout_alignParentEnd">true</item>
@@ -86,7 +94,7 @@
         <item name="android:layout_marginEnd">@dimen/txt_ic_mr</item>
         <item name="android:textOff">@null</item>
         <item name="android:textOn">@null</item>
-        <item name="android:padding">14dp</item>
+        <item name="android:padding">13dp</item>
         <item name="android:background">@drawable/bg_circle_clear</item>
     </style>
 
@@ -126,17 +134,31 @@
         <item name="android:background">@drawable/bg_circle_300</item>
     </style>
 
-    <!--SPINNERS / CMB-->
-
-    <style name="SpinnerGender">
-        <item name="android:layout_height">@dimen/elmnt_y</item>
-        <item name="android:paddingStart">@dimen/cmb_px</item>
-        <item name="android:paddingEnd">@dimen/cmb_px</item>
+    <!--TEXT FIELDS STYLE-->
+    <style name="Txt_Layout_Primary" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="shapeAppearanceOverlay">@style/Txt_Layout_Primary_Shape</item>
+        <item name="prefixTextAppearance">@style/Txt_Layout_Primary_Prefix</item>
         <item name="android:layout_marginStart">@dimen/mx</item>
-        <item name="android:background">@drawable/bg_dropdown</item>
+        <item name="android:layout_marginEnd">@dimen/mx</item>
+        <item name="android:layout_marginTop">@dimen/elmnt_gap</item>
+        <item name="errorIconDrawable">@null</item>
     </style>
 
-    <!--TEXT FIELDS STYLE-->
+    <style name="Txt_ComboBox_Primary" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="shapeAppearanceOverlay">@style/Txt_Layout_Primary_Shape</item>
+        <item name="android:layout_marginStart">@dimen/mx</item>
+        <item name="android:layout_marginEnd">@dimen/mx</item>
+        <item name="android:layout_marginTop">@dimen/elmnt_gap</item>
+        <item name="errorIconDrawable">@null</item>
+    </style>
+    
+    <style name="Txt_Layout_Primary_Shape">
+        <item name="cornerSize">@dimen/corner_radius</item>
+    </style>
+
+    <style name="Txt_Layout_Primary_Prefix">
+        <item name="android:gravity">center_vertical</item>
+    </style>
 
     <style name="Txt_Primary" parent="Widget.AppCompat.EditText">
         <item name="android:layout_width">match_parent</item>
@@ -145,29 +167,13 @@
         <item name="android:layout_marginEnd">@dimen/mx</item>
         <item name="android:paddingStart">@dimen/txt_px</item>
         <item name="android:paddingEnd">@dimen/txt_px</item>
-        <item name="android:background">@drawable/bg_textfield_default</item>
-        <item name="android:layout_marginTop">8dp</item>
-    </style>
-
-    <style name="Txt_With_Icon" parent="Widget.AppCompat.EditText">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/elmnt_y</item>
-        <item name="android:paddingStart">@dimen/txt_px</item>
-        <item name="android:paddingEnd">@dimen/txt_pr</item>
-        <item name="android:background">@drawable/bg_textfield_default</item>
-    </style>
-
-    <style name="Txt_Container">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">@dimen/mx</item>
-        <item name="android:layout_marginEnd">@dimen/mx</item>
-        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:background">@drawable/bg_textfield_selector</item>
+        <item name="android:layout_marginTop">@dimen/txt_mt</item>
+        <item name="android:textColorHint">#757575</item>
     </style>
 
     <!--LABELS STYLE-->
-
-    <style name="TextHeadingRegular" parent="Widget.AppCompat.TextView">
+    <style name="Text_H1_Regular" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/mx</item>
@@ -178,7 +184,7 @@
         <item name="android:textColor">@color/neutral_900</item>
     </style>
 
-    <style name="TextHeadingColored" parent="Widget.AppCompat.TextView">
+    <style name="Text_H1_Colored" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/mx</item>
@@ -189,7 +195,7 @@
         <item name="android:textColor">@color/accent_500</item>
     </style>
 
-    <style name="TextHeadingColoredInline" parent="Widget.AppCompat.TextView">
+    <style name="Text_H1_Colored_Inline" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">8dp</item>
@@ -199,28 +205,22 @@
         <item name="android:textColor">@color/accent_500</item>
     </style>
 
-    <style name="TextBody" parent="Widget.AppCompat.TextView">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="Text_H6" parent="Widget.AppCompat.TextView">
         <item name="android:layout_marginStart">@dimen/mx</item>
-        <item name="android:layout_marginEnd">@dimen/mx</item>
+        <item name="android:textColor">@color/neutral_900</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginTop">@dimen/elmnt_gap</item>
+    </style>
+
+    <style name="Text_Regular" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textSize">@dimen/text_md</item>
         <item name="android:textColor">@color/neutral_500</item>
     </style>
 
-    <style name="TextBodyError" parent="Widget.AppCompat.TextView">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">@dimen/mx_err</item>
-        <item name="android:layout_marginEnd">@dimen/mx_err</item>
-        <item name="android:fontFamily">@font/roboto</item>
-        <item name="android:textSize">@dimen/text_sm</item>
-        <item name="android:textColor">@color/danger_500</item>
-        <item name="android:layout_marginTop">2dp</item>
-    </style>
-
-    <style name="Lbl_PageNumber" parent="Widget.AppCompat.TextView">
+    <style name="Text_Page_Number" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginEnd">@dimen/pg_num_end</item>
@@ -234,6 +234,16 @@
         <item name="android:textSize">@dimen/text_lg</item>
         <item name="android:fontFamily">@font/spoof_regular</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Container_Description">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/container_desc_p</item>
+        <item name="android:layout_marginTop">@dimen/container_desc_mt</item>
+        <item name="android:layout_marginStart">@dimen/mx</item>
+        <item name="android:layout_marginEnd">@dimen/mx</item>
+        <item name="android:background">@drawable/bg_squircle_50</item>
     </style>
 
 </resources>
