--- a/app/src/main/res/layout/dlg_message.xml
+++ b/app/src/main/res/layout/dlg_message.xml
@@ -14,59 +14,75 @@
         android:paddingEnd="@dimen/mx"
         android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/imgDialogLogo"
-            android:layout_width="@dimen/circle_lg"
-            android:layout_height="@dimen/circle_lg"
-            android:layout_marginTop="24dp"
-            android:background="@drawable/bg_circle_50"
-            android:padding="@dimen/ic_p"
-            android:src="@drawable/ic_wifi_off"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />
+<!--        <ImageView-->
+<!--            android:id="@+id/imgDialogLogo"-->
+<!--            android:layout_width="@dimen/circle_lg"-->
+<!--            android:layout_height="@dimen/circle_lg"-->
+<!--            android:layout_marginTop="24dp"-->
+<!--            android:background="@drawable/bg_circle_50"-->
+<!--            android:padding="@dimen/ic_p"-->
+<!--            android:src="@drawable/ic_wifi_off"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />-->
 
         <TextView
-            android:id="@+id/lblDialogTitle"
+            android:id="@+id/lblDlgInfoEmoji"
+            style="@style/Text_Regular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:textSize="@dimen/text_emoji_lg"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/lblDlgInfoTitle"
             style="@style/Text_Regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
+            android:fontFamily="@font/roboto_bold"
             android:gravity="center"
             android:text="@string/dlg_placeholder_title"
             android:textColor="@color/neutral_900"
-            android:textStyle="bold"
+            android:textSize="@dimen/text_lg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imgDialogLogo" />
+            app:layout_constraintTop_toBottomOf="@id/lblDlgInfoEmoji" />
 
         <TextView
-            android:id="@+id/lblDialogBody"
+            android:id="@+id/lblDlgInfoBody"
             style="@style/Text_Regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@string/dlg_placeholder_body"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblDialogTitle" />
+            app:layout_constraintTop_toBottomOf="@id/lblDlgInfoTitle"
+            app:lineHeight="22dp" />
 
         <Button
-            android:id="@+id/btnDialogPrimary"
-            style="@style/Btn_Text"
+            android:id="@+id/btnDlgInfoPrimary"
+            style="@style/Btn_Primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="20dp"
+            android:insetTop="5dp"
+            android:insetBottom="5dp"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
             android:text="@string/btn_okay"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lblDialogBody"
-            tools:ignore="VisualLintButtonSize" />
+            app:layout_constraintTop_toBottomOf="@id/lblDlgInfoBody" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
