--- a/app/src/main/res/layout/frg_create_account_part3.xml
+++ b/app/src/main/res/layout/frg_create_account_part3.xml
@@ -12,9 +12,20 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        style="@style/Progress_Linear"
+        android:layout_height="2dp"
+        android:max="100"
+        android:progress="100"
+        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnBack" />
+
     <TextView
         android:id="@+id/lblPageNumber"
         style="@style/Text_Page_Number"
+        android:fontFamily="@font/roboto_bold"
         android:text="@string/pg_num_3"
         app:layout_constraintBottom_toBottomOf="@+id/btnBack"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,18 +89,17 @@
         app:layout_constraintTop_toBottomOf="@+id/containerDescription" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtLayoutFirstName"
+        android:id="@+id/txtLayoutFullName"
         style="@style/Txt_Layout_Primary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:hint="@string/title_first_name"
-        app:layout_constraintEnd_toStartOf="@+id/txtLayoutLastName"
+        android:hint="@string/title_full_name"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblH6PersonalInformation">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtFirstName"
+            android:id="@+id/txtFullName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="false"
@@ -98,26 +108,26 @@
             tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtLayoutLastName"
-        style="@style/Txt_Layout_Primary"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:hint="@string/title_last_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtLayoutFirstName"
-        app:layout_constraintTop_toBottomOf="@+id/lblH6PersonalInformation">
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:id="@+id/txtLayoutLastName"-->
+<!--        style="@style/Txt_Layout_Primary"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="4dp"-->
+<!--        android:hint="@string/title_last_name"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/txtLayoutFirstName"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/lblH6PersonalInformation">-->
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtLastName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:longClickable="false"
-            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
-    </com.google.android.material.textfield.TextInputLayout>
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:id="@+id/txtLastName"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:focusable="false"-->
+<!--            android:focusableInTouchMode="false"-->
+<!--            android:longClickable="false"-->
+<!--            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />-->
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txtLayoutGender"
@@ -128,7 +138,7 @@
         android:hint="@string/title_gender"
         app:layout_constraintEnd_toStartOf="@+id/txtLayoutBirthDate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLayoutFirstName">
+        app:layout_constraintTop_toBottomOf="@+id/txtLayoutFullName">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtGender"
@@ -149,7 +159,7 @@
         android:hint="@string/title_birth_date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtLayoutGender"
-        app:layout_constraintTop_toBottomOf="@+id/txtLayoutLastName">
+        app:layout_constraintTop_toBottomOf="@+id/txtLayoutFullName">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtBirthDate"
@@ -238,7 +248,7 @@
         android:id="@+id/btnCreateAccount"
         style="@style/Btn_Primary"
         android:layout_width="match_parent"
-        android:text="@string/btn_create_my_account"
+        android:text="@string/btn_continue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
