--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,13 +4,13 @@
 
     <!--GLOBAL-->
     <dimen name="corner_radius">12dp</dimen>
-    <dimen name="heading_margin_top">80dp</dimen>
+    <dimen name="h_mt">70dp</dimen>
     <dimen name="mx">24dp</dimen>
     <dimen name="mx_err">44dp</dimen>
     <dimen name="elmnt_y">52dp</dimen>
     <dimen name="elmnt_gap">8dp</dimen>
 
-    <dimen name="circle_lg">50dp</dimen>
+    <dimen name="circle_lg">52dp</dimen>
     <dimen name="circle_md">34dp</dimen>
     <dimen name="circle_sm">26dp</dimen>
 
@@ -19,6 +19,8 @@
     <dimen name="text_lg">18sp</dimen>
     <dimen name="text_md">14sp</dimen>
     <dimen name="text_sm">12sp</dimen>
+
+    <dimen name="text_emoji_lg">42sp</dimen>
 
     <dimen name="letter_spacing">0.6</dimen>
     <dimen name="line_spacing">-6dp</dimen>
@@ -46,8 +48,12 @@
     <dimen name="ic_sm">22sp</dimen>
     <dimen name="ic_p">10dp</dimen>
 
+    <!--LINEAR PROGRESS INDICATOR-->
+    <dimen name="progress_width">120dp</dimen>
+    <dimen name="progress_thick">3dp</dimen>
+
     <!--PAGE NUMBERS-->
-    <dimen name="pg_num_end">22dp</dimen>
+    <dimen name="pg_num_end">24dp</dimen>
 
     <!--CONTAINER DESCRIPTION-->
     <dimen name="container_desc_mt">8dp</dimen>
@@ -55,4 +61,5 @@
     <dimen name="text_desc_mt">1dp</dimen>
     <dimen name="text_desc_mb">3dp</dimen>
     <dimen name="text_desc_ml">6dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
