--- a/app/src/main/res/layout/frg_create_account_part3.xml
+++ b/app/src/main/res/layout/frg_create_account_part3.xml
@@ -83,6 +83,7 @@
         style="@style/Text_H6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/mx"
         android:layout_marginTop="12dp"
         android:text="@string/h6_personal_information"
         app:layout_constraintStart_toStartOf="parent"
@@ -176,6 +177,7 @@
         style="@style/Text_H6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/mx"
         android:layout_marginTop="12dp"
         android:text="@string/h6_account_information"
         app:layout_constraintStart_toStartOf="parent"
