--- a/app/src/main/res/layout/frg_forgot_password.xml
+++ b/app/src/main/res/layout/frg_forgot_password.xml
@@ -68,7 +68,9 @@
         android:hint="@string/title_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/containerDescription">
+        app:layout_constraintTop_toBottomOf="@+id/containerDescription"
+        app:helperTextEnabled="true"
+        app:helperText="@string/helper_forgot_password_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtEmail"
