--- a/app/src/main/res/layout/frg_main_home.xml
+++ b/app/src/main/res/layout/frg_main_home.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
+
+    <TextView
+        android:id="@+id/lblGreetings"
+        style="@style/Text_Regular"
+        android:layout_marginStart="@dimen/mx"
+        android:layout_marginTop="@dimen/text_greetings_mt"
+        android:text="@string/placeholder"
+        android:textSize="@dimen/text_md"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
+    <TextView
+        android:id="@+id/lblUserFullName"
+        style="@style/Text_H6"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:fontFamily="@font/spoof_regular"
+        android:text="@string/placeholder"
+        android:textSize="@dimen/text_lg"
+        app:layout_constraintStart_toStartOf="@+id/lblGreetings"
+        app:layout_constraintTop_toBottomOf="@+id/lblGreetings" />
 </androidx.constraintlayout.widget.ConstraintLayout>
