--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,9 @@
         <item name="colorSecondaryVariant">@color/accent_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/accent_500</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/roboto</item>
         <item name="android:textSize">@dimen/text_md</item>
@@ -32,21 +34,6 @@
         <item name="android:layout_marginBottom">@dimen/btn_mb</item>
         <item name="rippleColor">@color/ripple_primary</item>
     </style>
-
-<!--    <style name="Btn_Secondary" parent="Widget.MaterialComponents.Button.OutlinedButton">-->
-<!--        <item name="cornerRadius">@dimen/corner_radius</item>-->
-<!--        <item name="android:fontFamily">@font/roboto_bold</item>-->
-<!--        <item name="android:textColor">@color/neutral_900</item>-->
-<!--        <item name="android:textAllCaps">false</item>-->
-<!--        <item name="android:letterSpacing">0.06</item>-->
-<!--        <item name="android:stateListAnimator">@null</item>-->
-<!--        <item name="android:insetTop">@dimen/btn_inset_y</item>-->
-<!--        <item name="android:insetBottom">@dimen/btn_inset_y</item>-->
-<!--        <item name="android:layout_height">@dimen/elmnt_y</item>-->
-<!--        <item name="android:layout_marginStart">@dimen/mx</item>-->
-<!--        <item name="android:layout_marginEnd">@dimen/mx</item>-->
-<!--        <item name="rippleColor">@color/ripple_secondary</item>-->
-<!--    </style>-->
 
     <style name="Btn_Secondary" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="cornerRadius">@dimen/corner_radius</item>
@@ -190,7 +177,7 @@
         <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
         <item name="android:layout_marginTop">@dimen/line_spacing</item>
-        <item name="android:fontFamily">@font/spoof_bold</item>
+        <item name="android:fontFamily">@font/spoof_regular</item>
         <item name="android:textSize">@dimen/text_xl</item>
         <item name="android:textColor">@color/accent_500</item>
     </style>
@@ -206,7 +193,6 @@
     </style>
 
     <style name="Text_H6" parent="Widget.AppCompat.TextView">
-        <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:textColor">@color/neutral_900</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginTop">@dimen/elmnt_gap</item>
